--- a/derstall.html
+++ b/derstall.html
@@ -34,8 +34,8 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
-                         style="max-height: 70px;">
+                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="        max-height: 120px;">
+                        
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/BlickindenStall_1800p.JPG');">
+         style="        background-image: url('images/Website_4DerStall_Header_Lettering im Stall-1800p.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
@@ -97,49 +97,24 @@
         <div class="container">
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid"></a>
+                    <a href="images/Website_4DerStall_Lettering im Stall-1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-1000p.JPG" alt="Image" class="img-fluid"></a>
 
-                    <!--<a href="portfolio-single.html" class="work-thumb">
-                    <div class="work-text">
-                        <h2>Project Name Here</h2>
-                        <p>Business</p>
-                    </div>
-                    <img src="images/7342F19A-D9E7-4417-A5E2-1D4110CA1FD5_pano1000p.JPG" alt="Image" class="img-fluid">
-                </a>-->
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
                     <a href="images/Radio_pano1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>
-
-                    <!--<a href="portfolio-single.html" class="work-thumb">
-                    <div class="work-text">
-                        <h2>Project Name Here</h2>
-                        <p>Design</p>
-                    </div>
-                    <img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid">
-                </a>-->
-                </div>
-
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="300">
                     <a href="images/Stall_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid"></a>
-                    <!--<a href="portfolio-single.html" class="work-thumb">
-                    <div class="work-text">
-                        <h2>Project Name Here</h2>
-                        <p>Business</p>
-                    </div>
-                    <img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid">
-                </a>-->
                 </div>
 
+            </div>
+            <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>
-                    <!--<a href="portfolio-single.html" class="work-thumb">
-                    <div class="work-text">
-                        <h2>Project Name Here</h2>
-                        <p>Business</p>
-                    </div>
-                    <img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid">
-                </a>-->
+                    <a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>                    
+                    <a href="images/Website_4DerStall_Lettering im Stall-56-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-56-1000p.jpg" alt="Image" class="img-fluid"></a>                    
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
+                    <a href="images/Website_4DerStall_Lettering im Stall-74-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-74-1000p.jpg" alt="Image" class="img-fluid"></a>                    
+                    <a href="images/Website_4DerStall_Lettering im Stall-45-1500p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-45-1500p.jpg" alt="Image" class="img-fluid"></a>                    
                 </div>
 
             </div>
@@ -159,9 +134,9 @@
 
                     <!--<span class="d-block text-uppercase text-primary">About US</span>-->
                     <h2 class="mb-4 section-title">Gemeinsam kreativ sein</h2>
-                    <p>Zwei große Tische bieten Platz für maximal 16 Personen, eine kleine Küchenzeile mit Kaffeemaschine, Garderobe sowie einer Toilette.</p>
+
                     <p class="mb-5"><a href="https://www.google.de/maps/place/Wohnmobil-+und+Wohnwagenstellplatz/@49.4755018,9.8325218,17z/data=!3m1!4b1!4m5!3m4!1s0x4798707fbba92deb:0x354358b8789e2ec8!8m2!3d49.4754983!4d9.8347105" target="_blank">Parkmöglichkeiten</a> gibt es direkt nach dem Überqueren der Tauberbrücke. Auf der linken Seite ist ein großer öffentlicher Parkplatz der ehemaligen Feuerwehr.</p>
-                    
+
                     <p><a href="letteringlernen.html" class="btn btn-outline-black">Workshops</a></p>
                 </div>
                 <div class="col-lg-6 order-1">
@@ -171,6 +146,22 @@
                     </figure>
 
                 </div>
+            </div>
+
+            <div class="container">
+
+                <div class="row mb-5 no-gutters">
+                    <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
+                        <a href="images/Website_4DerStall_Lettering im Stall-31-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-31-1000p.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="images/Website_4DerStall_Lettering im Stall-33-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-33-1000p.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
+                        <a href="images/Website_4DerStall_Lettering im Stall-123-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-123-1000p.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="images/Website_4DerStall_Lettering im Stall-124-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-124-1000p.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+
+                </div>
+
             </div>
 
         </div>
@@ -184,7 +175,7 @@
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
                     <h3 class="mb-4">Lettering im Stall</h3>
-                    <p>Lena Staudt</p>
+                    <p>Lena Bender</p>
                     <p>Im Stall</p>
                     <p>Kitzlesweg 15</p>
                     <p>97980 Markelsheim</p>
@@ -204,7 +195,7 @@
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
                         <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.instagram.com/lettering_im_stall/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
 
