--- a/fussmatte.html
+++ b/fussmatte.html
@@ -38,7 +38,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/BlickindenStall_1800p.JPG');">
+         style="        background-image: url('images/Website_5Shop_Fußmatte_Header_MG_1800p.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll">
@@ -98,7 +98,12 @@
                                     <label for="full-name">Größe wählen</label>
                                     <select name="Groesse" required="" class="form-control " style="height:50px">
                                         <option value="Select" selected="" disabled="">Groesse</option>
-                                        <option value="Ring">60*90 cm</option>
+                                        <option value="40x60 Bis zu 10 Zeichen 28 €">40x60 Bis zu 10 Zeichen (z. B. Daheim, Home, Hallo …) 28€</option>
+                                        <option value="40x60 Bis zu 20 Zeichen 36 €">40x60 Bis zu 20 Zeichen (z. B. Herzlich Willkommen, Familie Müller, …) 36€</option>
+                                        <option value="40x60 Ab 21 Zeichen 41 €">40x60 Ab 21 Zeichen (z. B. Herzlich Willkommen bei den Müllers, Hereinspaziert bei den Müllers, ..) 41€</option>
+                                        <option value="60x90 Bis zu 10 Zeichen 28 €">60x90 Bis zu 10 Zeichen (z. B. Daheim, Home, Hallo …) 32€</option>
+                                        <option value="60x90 Bis zu 20 Zeichen 36 €">60x90 Bis zu 20 Zeichen (z. B. Herzlich Willkommen, Familie Müller, …) 40€</option>
+                                        <option value="60x90 Ab 21 Zeichen 41 €">60x90 Ab 21 Zeichen (z. B. Herzlich Willkommen bei den Müllers, Hereinspaziert bei den Müllers, ..) 45€</option>
 
                                     </select>
                                 </div>
@@ -106,11 +111,22 @@
                             <div class="row">
                                 <div class="col-md-12 form-group">
                                     <label for="message">Text</label>
-                                    <textarea name="Nachricht" id="message" class="form-control" placeholder="Zum Beispiel: Familie Winter, die Winters, Mr & Mrs Winter, Welcome to the world little one, Schön, dass du da bist" required cols="30" rows="8"></textarea>
+                                    <textarea name="Nachricht" id="message" class="form-control" placeholder="Dein Wunschtext" required cols="30" rows="8"></textarea>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6 form-group">
+                                <div class="col-md-3 form-group">
+                                    <select name="Datenschutz" required="" class="form-control " style="height:50px" required>
+                                        <option value="Select" selected="" disabled="">Datenschutz</option>
+                                        <option value="Einverstanden">Einverstanden</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-9 form-group">
+                                    <label for="message">Du erklärst dich damit einverstanden, dass Deine Daten zur Bearbeitung Deines Anliegens verarbeitet werden. Weitere Informationen und Widerrufshinweise findest Du in der <a href="datenschutz.html">Datenschutzerklärung</a></label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 form-group">
                                     <input type="submit" value="Abschicken" class="btn btn-outline-black px-3 py-3">
                                 </div>
                             </div>
@@ -132,7 +148,7 @@
                 <div class="row mb-5">
                     <div class="col-md-4 mb-5">
                         <h3 class="mb-4">Lettering im Stall</h3>
-                        <p>Lena Staudt</p>
+                        <p>Lena Bender</p>
                         <p>Im Stall</p>
                         <p>Kitzlesweg 15</p>
                         <p>97980 Markelsheim</p>
@@ -151,7 +167,7 @@
                     <div class="col-md-3 mb-5">
                         <ul class="list-unstyled footer-link d-flex footer-social">
                             <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="https://www.instagram.com/lettering_im_stall/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                         </ul>
                     </div>
 
