--- a/impressum.html
+++ b/impressum.html
@@ -34,8 +34,8 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
-                         style="max-height: 70px;">
+                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="        max-height: 120px;">
+                        
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
@@ -85,7 +85,7 @@
         <div class="section-content">
             <h2>Impressum</h2>
             <p>
-                Lena Staudt<br />
+                Lena Bender<br />
                 Lettering im Stall<br />An der Tauber 14<br />97990 Elpersheim
             </p>
             <p>
@@ -117,7 +117,7 @@
                 <div class="row mb-5">
                     <div class="col-md-4 mb-5">
                         <h3 class="mb-4">Lettering im Stall</h3>
-                        <p>Lena Staudt</p>
+                        <p>Lena Bender</p>
                         <p>Im Stall</p>
                         <p>Kitzlesweg 15</p>
                         <p>97980 Markelsheim</p>
@@ -140,7 +140,7 @@
                     <div class="col-md-3 mb-5">
                         <ul class="list-unstyled footer-link d-flex footer-social">
                             <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="https://www.instagram.com/lettering_im_stall/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                         </ul>
                     </div>
 
