--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">                
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
-                         style="max-height: 70px;">
+                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="        max-height: 120px;">
+                        
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/BlickindenStall_1800p.JPG');">
+         style="        background-image: url('images/Website_1Willkommen_Header_Lettering im Stall-1800p.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
@@ -88,7 +88,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6 order-md-2" data-aos="fade-up" data-aos-delay="100">
                     <figure class="img-dotted-bg">
-                        <img src="images/970BDB0B-2D3F-4C40-B79D-BA03DC16DF6E_1000p.JPG" alt="Image" class="img-fluid">
+                        <img src="images/Website_1Willkommen_IchBinLena_Lettering im Stall-1000p.jpg" alt="Image" class="img-fluid">
                     </figure>
                 </div>
                 <div class="col-md-5 mr-auto" data-aos="fade-up" data-aos-delay="">
@@ -119,7 +119,7 @@
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
                     <h3 class="mb-4">Lettering im Stall</h3>
-                    <p>Lena Staudt</p>
+                    <p>Lena Bender</p>
                     <p>Im Stall</p>
                     <p>Kitzlesweg 15</p>
                     <p>97980 Markelsheim</p>
@@ -142,7 +142,7 @@
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
                         <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.instagram.com/lettering_im_stall/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
 
