--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -34,8 +34,8 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
-                         style="max-height: 70px;">
+                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"  style="        max-height: 120px;">
+                       
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/BlickindenStall_1800p.JPG');">
+         style="background-image: url('images/Website_2LetteringLernen_Header_Lettering im Stall-1800p.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
@@ -86,7 +86,7 @@
 
 
     <div class="section bg-light" id="Infos" style="padding:30px">
-        <div class="container" >
+        <div class="container">
             <div class="row mb-5">
                 <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
 
@@ -96,7 +96,7 @@
                             <p>55€ Kursgebühr</p>
                         </div>
                         <img src="images/AnfaengerWorkshop.png" alt="Image" class="img-fluid">
-                    </a>                    
+                    </a>
 
                     <a href="kursbuchenAdvanced.html" target="_blank" class="work-thumb">
                         <div class="work-text">
@@ -120,15 +120,104 @@
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Viele Stifte zum Testen </li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Snacks und Zitronenwasser</li>
-                                    <li style="list-style: disc; display: list-item; margin-left:5px;">10 % Rabattgutschein für Deine Lettering Ausstattung bei <a href="https://www.zimmermann-schreibkultur.de/" target="_blank">Zimmermann Schreibkultur</a></li>                                                                      
+                                    <li style="list-style: disc; display: list-item; margin-left:5px;">10 % Rabattgutschein für Deine Lettering Ausstattung bei <a href="https://www.zimmermann-schreibkultur.de/" target="_blank">Zimmermann Schreibkultur</a></li>
                                 </ul>
-                            </li>                            
+                            </li>
                         </ul>
-                        
+
                     </div>
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <!--Erfahrungsberichte-->
+    <div class="section bg-light block-11" id="Erfahrungsberichte">
+        <div class="container">
+            <div class="row justify-content-center mb-5">
+                <div class="col-md-8 text-center">
+                    <h2 class="mb-4 section-title">Nachrichten unserer Kursteilnehmer</h2>
+                </div>
+            </div>
+            <div class="nonloop-block-11 owl-carousel">
+                <div class="item">
+                    <div class="block-33 h-100">
+                        <div class="vcard d-flex mb-3">
+                            <div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>
+                            <div class="name-text align-self-center">
+                                <h2 class="heading">Caro</h2>
+                                <span class="meta">Kursteilnehmerin</span>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <blockquote>
+                                <p>
+                                    Danke für den schönen Kurs gestern Abend. Das war wirklich super. Wir waren alle total begeistert. Mach weiter so :)!
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="block-33 h-100">
+                        <div class="vcard d-flex mb-3">
+                            <div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>
+                            <div class="name-text align-self-center">
+                                <h2 class="heading">Ariane und Swetlana</h2>
+                                <span class="meta">Kursteilnehmer</span>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <blockquote>
+                                <p>
+                                    Wir haben den Anfänger Kurs bei Lena besucht. Es war toll und wirklich professionell. Wir haben uns beim gemütlichen Ambiente im Stall sehr wohl gefühlt und hatten total viel Spaß. Schön, Dich bei uns hier in der Nähe zu haben!
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="block-33 h-100">
+                        <div class="vcard d-flex mb-3">
+                            <div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>
+                            <div class="name-text align-self-center">
+                                <h2 class="heading">Marie-Sophie</h2>
+                                <span class="meta">Kursteilnehmerin</span>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <blockquote>
+                                <p>
+                                    Die Handlettering-Workshops in einem so liebevoll gestalteten Ambiente und einer sehr angenehmen Atmosphäre haben super viel Spaß gemacht. Man geht nicht nur mit einem Lächeln auf den Lippen, sondern auch mit wunderschönen Kartenkunstwerken im Gepäck nach Hause
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="block-33 h-100">
+                        <div class="vcard d-flex mb-3">
+                            <div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>
+                            <div class="name-text align-self-center">
+                                <h2 class="heading">Theresia</h2>
+                                <span class="meta">Kursteilnehmerin</span>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <blockquote>
+                                <p>
+                                    Die Lettering-Workshops im Stall waren fantastisch“! Mit einer klasse Lehrerin, bei dem schönen Ambiente und netten Letteringschülern sind die drei Stunden wie im Flug vergangen. Ich habe viel gelernt und wunderschöne Karten mit nach Hause genommen.
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
@@ -137,7 +226,6 @@
             <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FBerlin&amp;src=ZGUuZ2VybWFuI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23009688&amp;showTitle=0&amp;showNav=1&amp;showDate=1&amp;showPrint=1&amp;showTabs=1&amp;showCalendars=1&amp;showTz=1" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>-->
-
     <!-- Individuelle Anfrage -->
     <div class="bg-secondary py-5">
         <div class="container text-center">
@@ -160,7 +248,7 @@
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
                     <h3 class="mb-4">Lettering im Stall</h3>
-                    <p>Lena Staudt</p>
+                    <p>Lena Bender</p>
                     <p>Im Stall</p>
                     <p>Kitzlesweg 15</p>
                     <p>97980 Markelsheim</p>
@@ -183,7 +271,7 @@
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
                         <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.instagram.com/lettering_im_stall/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
 
