--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -38,7 +38,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/BlickindenStall_1800p.JPG');">
+         style="        background-image: url('images/Website_5Shop_Gutschein_Header_Lettering im Stall-1800p.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
@@ -61,6 +61,7 @@
 
                             <p>
                                 Hier kannst du ganz einfach deinen Gutschein bestellen, ich melde mich dann schnellstmöglich bei dir.
+                                Wenn du den Gutschein per Post erhalten möchtest, denk bitte daran, deine Postanschrift ins Nachrichtenfeld zu schreiben.
                             </p>
                         </div>                       
                     </div>
@@ -133,7 +134,18 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-3 form-group">
+                                <select name="Datenschutz" required="" class="form-control " style="height:50px" required>
+                                    <option value="Select" selected="" disabled="">Datenschutz</option>
+                                    <option value="Einverstanden">Einverstanden</option>
+                                </select>
+                            </div>
+                            <div class="col-md-9 form-group">
+                                <label for="message">Du erklärst dich damit einverstanden, dass Deine Daten zur Bearbeitung Deines Anliegens verarbeitet werden. Weitere Informationen und Widerrufshinweise findest Du in der <a href="datenschutz.html">Datenschutzerklärung</a></label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 form-group">
                                 <input type="submit" value="Abschicken" class="btn btn-outline-black px-3 py-3">
                             </div>
                         </div>
@@ -155,7 +167,7 @@
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
                     <h3 class="mb-4">Lettering im Stall</h3>
-                    <p>Lena Staudt</p>
+                    <p>Lena Bender</p>
                     <p>Im Stall</p>
                     <p>Kitzlesweg 15</p>
                     <p>97980 Markelsheim</p>
@@ -174,7 +186,7 @@
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
                         <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.instagram.com/lettering_im_stall/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
 
