--- a/shop.html
+++ b/shop.html
@@ -34,8 +34,8 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\IMG_0191_white.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall"
-                         style="max-height: 70px;">
+                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="        max-height: 120px;">
+                        
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
@@ -105,7 +105,7 @@
                             <h2>Gutscheine</h2>
 
                         </div>
-                        <img src="images/Gutscheine.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Website_5Shop_Kachel_Gutschein_Lettering im Stall-149-1000p.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
@@ -114,7 +114,7 @@
                         <div class="work-text">
                             <h2>Fußmatten personalisieren</h2>
                         </div>
-                        <img src="images/Fussmatten.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Website_5Shop_Kachel_FußmatteIMG_8261.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
@@ -135,101 +135,14 @@
     </div>
 
 
-    <!--Erfahrungsberichte-->
-    <div class="section bg-light block-11" id="Erfahrungsberichte">
-        <div class="container">
-            <div class="row justify-content-center mb-5">
-                <div class="col-md-8 text-center">
-                    <h2 class="mb-4 section-title">Nachrichten unserer Kursteilnehmer</h2>
-                </div>
-            </div>
-            <div class="nonloop-block-11 owl-carousel">
-                <div class="item">
-                    <div class="block-33 h-100">
-                        <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>
-                            <div class="name-text align-self-center">
-                                <h2 class="heading">Melanie</h2>  
-                                <span class="meta">Kursteilnehmerin</span>
-                            </div>
-                        </div>
-                        <div class="text">
-                            <blockquote>
-                                <p>
-                                    Wir sind einfach Schock verliebt! Ein Traum! Vielen lieben Dank 😘 Hätten uns keine tollere Karten wünschen können! Danke! Danke! Danke! ❤ Folgeaufträge sind gesichert!
-                                </p>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="item">
-                    <div class="block-33 h-100">
-                        <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>
-                            <div class="name-text align-self-center">
-                                <h2 class="heading">Mimi</h2>
-                                <span class="meta">Kursteilnehmerin</span>
-                            </div>
-                        </div>
-                        <div class="text">
-                            <blockquote>
-                                <p>
-                                    Wir sind einfach Schock verliebt! Ein Traum! Vielen lieben Dank 😘 Hätten uns keine tollere Karten wünschen können! Danke! Danke! Danke! ❤ Folgeaufträge sind gesichert!
-                                </p>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="block-33 h-100">
-                        <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>
-                            <div class="name-text align-self-center">
-                                <h2 class="heading">Leni</h2>
-                                <span class="meta">Kursteilnehmerin</span>
-                            </div>
-                        </div>
-                        <div class="text">
-                            <blockquote>
-                                <p>
-                                    Wir sind einfach Schock verliebt! Ein Traum! Vielen lieben Dank 😘 Hätten uns keine tollere Karten wünschen können! Danke! Danke! Danke! ❤ Folgeaufträge sind gesichert!
-                                </p>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="block-33 h-100">
-                        <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>
-                            <div class="name-text align-self-center">
-                                <h2 class="heading">Verena</h2>
-                                <span class="meta">Hochzeitseinladung</span>
-                            </div>
-                        </div>
-                        <div class="text">
-                            <blockquote>
-                                <p>
-                                    Wir sind einfach Schock verliebt! Ein Traum! Vielen lieben Dank 😘 Hätten uns keine tollere Karten wünschen können! Danke! Danke! Danke! ❤ Folgeaufträge sind gesichert!
-                                </p>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
 
     <footer class="site-footer bg-secondary py-5" role="contentinfo">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4 mb-5">
                     <h3 class="mb-4">Lettering im Stall</h3>
-                    <p>Lena Staudt</p>
+                    <p>Lena Bender</p>
                     <p>Im Stall</p>
                     <p>Kitzlesweg 15</p>
                     <p>97980 Markelsheim</p>
@@ -252,7 +165,7 @@
                 <div class="col-md-3 mb-5">
                     <ul class="list-unstyled footer-link d-flex footer-social">
                         <li><a href="https://www.facebook.com/lenalettert/" class="p-2"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://www.instagram.com/lena_lettert/" class="p-2"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.instagram.com/lettering_im_stall/" class="p-2"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                 </div>
 
