--- a/derstall.html
+++ b/derstall.html
@@ -97,7 +97,7 @@
         <div class="container">
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="images/Website_4DerStall_Lettering im Stall-1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-1000p.JPG" alt="Image" class="img-fluid"></a>
+                    <a href="images/Website_4DerStall_Lettering im Stall-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-1000p.JPG" alt="Image" class="img-fluid"></a>
 
                 </div>
 
